syntax = "proto3";

package com.road.yishi.proto.mail;

message MailPickupRspMsg {
  repeated int32 pickupResult = 1;
  bool isfull = 2;
}
